[package]
name = "twilio-sms-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_qs = "0.9.1"
